spacing issues, background photo 119 replaced, text color edits

--- a/119Page/css/main.css
+++ b/119Page/css/main.css
@@ -2944,7 +2944,7 @@ html.no-csstransitions .home-content__main {
  * ------------------------------------------------------------------- */
 .s-contact {
     background-color: #151515;
-    background-image: url("../images/contact-bg.jpg");
+    background-image: url("../images/pexels-anni-roenkae-3418457.jpg");
     background-repeat: no-repeat;
     background-position: center, center;
     padding-top: 15rem;
@@ -3394,7 +3394,7 @@ footer .row {
     border: none;
     width: 85px;
     height: 28px;
-    background: url("../images/logo-footer.png") no-repeat center;
+    background: url("../images/119-blueLogo.png") ;
     background-size: 85px 28px;
     font: 0/0 a;
     text-shadow: none;
